--- a/configuration.properties
+++ b/configuration.properties
@@ -1,2 +1,13 @@
 browser=chrome
+## Web URL UI Testing
 url1=https://coinmarketcap.com/
+
+## API BASE URL
+base_uri=http://pro-api.coinmarketcap.com
+
+## API Key used for BackEnd Testing
+API_Key=X-CMC_PRO_API_KEY
+
+## Generated Token by valid Credentials
+token=d2b3a78f-6d9e-4758-8f40-88382fb5e80a
+
